# LearningVideo

./: README.md
app/: build.gradle
app/src/androidTest/java/com/cxp/learningvideo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/ffmpeg/include/: x264_config.h
app/src/main/cpp/media/: const.h  one_frame.h  player.cpp  player.h
app/src/main/cpp/media/decoder/: base_decoder.cpp  base_decoder.h  decode_state.h  i_decode_state_cb.cpp  i_decode_state_cb.h  i_decoder.h
app/src/main/cpp/media/decoder/audio/: a_decoder.cpp  a_decoder.h
app/src/main/cpp/media/decoder/video/: v_decoder.cpp  v_decoder.h
app/src/main/cpp/media/encoder/: base_encoder.cpp  base_encoder.h  i_encode_state_cb.h  i_encoder.h
app/src/main/cpp/media/encoder/audio/: a_encoder.cpp  a_encoder.h
app/src/main/cpp/media/encoder/video/: v_encoder.cpp  v_encoder.h
app/src/main/cpp/media/muxer/: ff_repack.cpp  ff_repack.h  i_muxer_cb.h  mp4_muxer.cpp  mp4_muxer.h
app/src/main/cpp/media/player/def_player/: player.cpp  player.h
app/src/main/cpp/media/player/gl_player/: gl_player.cpp  gl_player.h
app/src/main/cpp/media/render/audio/: audio_render.h  opensl_render.cpp  opensl_render.h
app/src/main/cpp/media/render/video/: video_render.h
app/src/main/cpp/media/render/video/native_render/: native_render.cpp  native_render.h
app/src/main/cpp/media/render/video/opengl_render/: opengl_pixel_receiver.h  opengl_render.cpp  opengl_render.h
app/src/main/cpp/media/synthesizer/: synthesizer.cpp  synthesizer.h
app/src/main/cpp/opengl/drawer/: drawer.cpp  drawer.h  video_drawer.cpp  video_drawer.h
app/src/main/cpp/opengl/drawer/proxy/: def_drawer_proxy_impl.cpp  def_drawer_proxy_impl.h  drawer_proxy.cpp  drawer_proxy.h
app/src/main/cpp/opengl/egl/: egl_core.cpp  egl_core.h  egl_surface.cpp  egl_surface.h
app/src/main/cpp/utils/: const.h  logger.h  timer.c
app/src/main/java/com/cxp/learningvideo/: EGLPlayerActivity.kt  FFEncodeActivity.kt  FFRepackActivity.kt  FFmpegActivity.kt  FFmpegGLPlayerActivity.kt  MainActivity.kt  MainApp.kt  MultiOpenGLPlayerActivity.kt  OpenGLPlayerActivity.kt  SimplePlayerActivity.kt  SimpleRenderActivity.kt  SoulPlayerActivity.kt  SynthesizerActivity.kt
app/src/main/java/com/cxp/learningvideo/media/: BaseDecoder.kt  DecodeState.kt  DefDecoderStateListener.kt  Frame.kt  IDecoder.kt  IDecoderStateListener.kt  IDecorderProgress.kt  IExtractor.kt
app/src/main/java/com/cxp/learningvideo/media/decoder/: AudioDecoder.kt  DefDecodeStateListener.kt  VideoDecoder.kt
app/src/main/java/com/cxp/learningvideo/media/encoder/: AudioEncoder.kt  BaseEncoder.kt  DefEncodeStateListener.kt  IEncodeStateListener.kt  VideoEncoder.kt
app/src/main/java/com/cxp/learningvideo/media/extractor/: AudioExtractor.kt  MMExtractor.kt  VideoExtractor.kt
app/src/main/java/com/cxp/learningvideo/media/muxer/: MMuxer.kt  MP4Repack.kt
app/src/main/java/com/cxp/learningvideo/opengl/: DefGLSurfaceView.kt  OpenGLTools.kt  SimpleRender.kt
app/src/main/java/com/cxp/learningvideo/opengl/drawer/: ADrawer.kt  BitmapDrawer.kt  IDrawer.kt  SoulVideoDrawer.kt  TriangleDrawer.kt  VideoDrawer.kt
app/src/main/java/com/cxp/learningvideo/opengl/egl/: CustomerGLRenderer.kt  EGLCore.kt  EGLSurfaceHolder.kt
app/src/main/java/com/cxp/learningvideo/utils/: Test.kt
app/src/main/res/layout/: activity_egl_player.xml  activity_ff_gl_player.xml  activity_ff_repack.xml  activity_ffmpeg_info.xml  activity_main.xml  activity_opengl_player.xml  activity_simpler_render.xml  activity_synthesizer.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/cxp/learningvideo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
